app.js:changed start method to scrape and retrieve the articles in one function using getJSON instead of ajax and only display articles once done() is called; removed scrape method; wrapped all document.on(click.. calls with document.on(ready...); changed all ajax calls to getJSON ; modified server to return a JSON object instead of a string when the scraping is complete. The string forced the JSON calls to invoke the fail callback even though scraping was successful; fixed some id names in index.html; Article.js: changed ref to one Note to an array of Notes; TODO: Notes are being saved but not displayed correctly; clean up app styling.

--- a/public/style.css
+++ b/public/style.css
@@ -23,8 +23,9 @@ body{
 #add-note{
   height: 100%;
   border:1px red solid;
+  resize: none;
 }
-#note{
+#notes{
   height: 100%;
   border:1px red solid;
 }
